--- a/WebClient/templates/base.twig
+++ b/WebClient/templates/base.twig
@@ -1,110 +1,81 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        {% block head %}
+{% extends "header_footer.twig" %}
 
-            <title>{% block title %}{% endblock %} | CubbyHole</title>
 
-            {% block stylesheets %}
-                <link href="css/bootstrap.css" type="text/css" rel="stylesheet" />   
-                <link href="css/icons.css" type="text/css" rel="stylesheet" />
-                <link href="css/bootstrap-editable.css" rel="stylesheet">
-            {% endblock %}
+{% block title %}{% endblock %} 
 
+
+{% block breadcrumb %}
+    <div class="row">
+        <ul class="breadcrumb-wrapper navbar-fixed-top" >                 
+            {% block breadcrumbcontent %}
+
+            {%endblock %}
+        </ul>
+    </div>
+{% endblock %}
+
+{% block body %}                        
+
+    {% block nav %}
+        <!-- End Header and Menu  -->        
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="container">                          
+                <div class="container-fluid">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="http://localhost/cubbyhole/"><strong>Cubbyhole</strong></a>
+                    </div>
+
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li class="active"><a href="http://localhost/cubbyhole/updates">Activity</a></li>
+                            <li><a href="http://localhost/cubbyhole/browse">Browse</a></li>
+
+                        </ul>
+
+
+                        <form class="navbar-form navbar-left" role="search">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Search files">
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-group"><span class="glyphicon glyphicon-search"></span></button>
+                        </form>
+
+                        <ul class="nav navbar-nav navbar-right">                                
+                            <li class="dropdown ">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="http://localhost/cubbyhole/settings">Edit profile</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
+
+            </div>            
+        </nav>
+        <!-- End Header and Menu  -->
+    {% endblock %}
+    <div class="" style="margin-top: 130px;">
+        {% block content %}
+            <!-- Main content goes here  -->
         {% endblock %}
-    </head>
+    </div>
 
+{% endblock %}
 
-    <!-- Body  --> 
-    <body>
-        <div class="row">
-            <ul class="breadcrumb-wrapper navbar-fixed-top" >                 
-                {% block breadcrumb %}
+{% block jsext %}
 
-                {%endblock %}
-            </ul>
-        </div>
-
-        {% block body %}                        
-
-            <!-- End Header and Menu  -->        
-            <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-                <div class="container">                          
-                    <div class="container-fluid">
-                        <!-- Brand and toggle get grouped for better mobile display -->
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                            <a class="navbar-brand" href="http://localhost/cubbyhole/"><strong>Cubbyhole</strong></a>
-                        </div>
-
-                        <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                            <ul class="nav navbar-nav">
-                                <li class="active"><a href="http://localhost/cubbyhole/updates">Activity</a></li>
-                                <li><a href="http://localhost/cubbyhole/browse">Browse</a></li>
-
-                            </ul>
-
-
-                            <form class="navbar-form navbar-left" role="search">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Search files">
-                                </div>
-                                <button type="submit" class="btn btn-primary btn-group"><span class="glyphicon glyphicon-search"></span></button>
-                            </form>
-
-                            <ul class="nav navbar-nav navbar-right">                                
-                                <li class="dropdown ">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="http://localhost/cubbyhole/settings">Edit profile</a></li>
-                                        <li><a href="#">Another action</a></li>
-                                        <li><a href="#">Something else here</a></li>
-                                        <li class="divider"></li>
-                                        <li><a href="#">Separated link</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div><!-- /.navbar-collapse -->
-                    </div><!-- /.container-fluid -->
-
-                </div>            
-            </nav>
-            <!-- End Header and Menu  -->
-            <div class="" style="margin-top: 130px;">
-                {% block content %}
-                    <!-- Main content goes here  -->
-                {% endblock %}
-            </div>
-
-        {% endblock %}
-        <!-- End Body  -->               
-    </body>
-
-        <div id="footer" style="padding: 20px;">
-            {% block footer %}
-                <hr/>
-                <div class="container">
-                    &copy; Copyright 2011 by <a href="#">Cubbyhole</a>.
-                </div>
-            {% endblock %}
-        </div>
-
-
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.js"></script>
-    <!-- Include all necessary function here -->
-    <script src="js/functions.js"></script>
-
-    <script src="js/bootstrap-editable.js"></script>
-
-</html>
+{% endblock %}
 
