--- a/WebClient/templates/settings.twig
+++ b/WebClient/templates/settings.twig
@@ -1,16 +1,7 @@
 {% extends "base.twig" %}
-{% block  title %}Account & Settings {% endblock title %}
+{% block  title %}{{title}} {% endblock title %}
 
-{% block breadcrumb %}
-    <!-- Nav tabs -->    
-    <div class="container" style="margin-top: 10px; padding: 10px 0 0 0;">
-        <ul class="nav nav-tabs">        
-            <li class="active"><a href="#account" data-toggle="tab">Account & Settings </a></li>
-            <li><a href="#profile" data-toggle="tab">Profile & Security</a></li>        
-        </ul>
-    </div>
-
-{% endblock %}
+{% block breadcrumb %}{% endblock %}
 
 
 
